<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
    <TextView
            android:id="@+id/textTrainLabel"
            android:text="@string/label_train_default"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_train_black_24dp"
            android:drawableTint="@color/color_primary_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="m"/>
    <TextView
            android:id="@+id/textDuration"
            android:text="@string/label_duration_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/textTrainLabel"
            app:layout_constraintTop_toTopOf="@id/textTrainLabel"
            app:layout_constraintBottom_toBottomOf="@id/textTrainLabel"/>
    <TextView
            android:id="@+id/textDepartureStation"
            android:text="@string/label_departure_station"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/color_primary_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            app:layout_constraintTop_toBottomOf="@id/textTrainLabel"
            app:layout_constraintStart_toStartOf="@id/textTrainLabel"
            app:layout_constraintEnd_toStartOf="@id/textArrow"/>
    <TextView
            android:id="@+id/textArrow"
            android:text="@string/label_arrow"
            android:textSize="@dimen/text_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/textDepartureStation"
            app:layout_constraintBottom_toBottomOf="@id/textDepartureStation"
            app:layout_constraintStart_toEndOf="@id/textDepartureStation"
            app:layout_constraintEnd_toStartOf="@id/textArrivalStation"/>
    <TextView
            android:id="@+id/textArrivalStation"
            android:text="@string/label_arrival_station"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/color_primary_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/textDepartureStation"
            app:layout_constraintBottom_toBottomOf="@id/textDepartureStation"
            app:layout_constraintStart_toEndOf="@id/textArrow"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/textDepartureTime"
            android:text="@string/label_train_time_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textDepartureStation"
            app:layout_constraintStart_toStartOf="@id/textDepartureStation"
            app:layout_constraintEnd_toEndOf="@id/textDepartureStation"/>
    <TextView
            android:id="@+id/textArrivalTime"
            android:text="@string/label_train_time_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textArrivalStation"
            app:layout_constraintStart_toStartOf="@id/textArrivalStation"
            app:layout_constraintEnd_toEndOf="@id/textArrivalStation"/>
</androidx.constraintlayout.widget.ConstraintLayout>
